--- a/wedding.html
+++ b/wedding.html
@@ -134,7 +134,61 @@
                             </div>  
                             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
                                 <a class="example-image-link" href="img/davefam.PNG" data-lightbox="example-1" data-title="Shayna, Audrey, Carly, Delaney, Dave Mellgren"><img src="img/davefam.PNG" alt="Shayna, Audrey, Carly, Delaney, Dave Mellgren" class="img-thumbnail"/></a>
-                            </div>                       
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1742.JPG" data-lightbox="example-1" data-title="Invitation and rings"><img src="img/IMG_1742.JPG" alt="Invitation and rings" class="img-thumbnail"/></a>
+                            </div>      
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1735.JPG" data-lightbox="example-1" data-title="Centerpiece"><img src="img/IMG_1735.JPG" alt="Centerpiece" class="img-thumbnail"/></a>
+                            </div>   
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1736.JPG" data-lightbox="example-1" data-title="Getting ready"><img src="img/IMG_1736.JPG" alt="Getting ready" class="img-thumbnail"/></a>
+                            </div>   
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1738.JPG" data-lightbox="example-1" data-title="Getting ready"><img src="img/IMG_1738.JPG" alt="Getting ready" class="img-thumbnail"/></a>
+                            </div>     
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1739.JPG" data-lightbox="example-1" data-title="Getting ready"><img src="img/IMG_1739.JPG" alt="Getting ready" class="img-thumbnail"/></a>
+                            </div>       
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1741.JPG" data-lightbox="example-1" data-title="Getting ready"><img src="img/IMG_1741.JPG" alt="Getting ready" class="img-thumbnail"/></a>
+                            </div>   
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1740.JPG" data-lightbox="example-1" data-title="Getting ready"><img src="img/IMG_1740.JPG" alt="Getting ready" class="img-thumbnail"/></a>
+                            </div>    
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1737.JPG" data-lightbox="example-1" data-title="Something old and blue"><img src="img/IMG_1737.JPG" alt="Grandma's purse" class="img-thumbnail"/></a>
+                            </div>    
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1742.JPG" data-lightbox="example-1" data-title="Theresa's Outfit"><img src="img/IMG_1742.JPG" alt="Theresa's Outfit" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1743.JPG" data-lightbox="example-1" data-title="The Couple"><img src="img/IMG_1743.JPG" alt="The Couple" class="img-thumbnail"/></a>
+                            </div>   
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1744.JPG" data-lightbox="example-1" data-title="The Couple"><img src="img/IMG_1744.JPG" alt="The Couple" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1745.JPG" data-lightbox="example-1" data-title="The Couple"><img src="img/IMG_1745.JPG" alt="The Couple" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1746.JPG" data-lightbox="example-1" data-title="The Couple"><img src="img/IMG_1746.JPG" alt="The Couple" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1747.JPG" data-lightbox="example-1" data-title="The Couple"><img src="img/IMG_1747.JPG" alt="The Couple" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1748.JPG" data-lightbox="example-1" data-title="The Couple"><img src="img/IMG_1748.JPG" alt="The Couple" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1748.JPG" data-lightbox="example-1" data-title="The Couple"><img src="img/IMG_1748.JPG" alt="The Couple" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1749.JPG" data-lightbox="example-1" data-title="The Couple"><img src="img/IMG_1749.JPG" alt="The Couple" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/IMG_1750.JPG" data-lightbox="example-1" data-title="The Wedding Party"><img src="img/IMG_1750.JPG" alt="The Wedding Party" class="img-thumbnail"/></a>
+                            </div> 
                         </div>
                     </div>
 
