--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html" class="active">Theresa and Nicole</a></li>
                                 <li><a href="all.html">2022</a></li>
-                                <li><a href="contact.html">More</a></li>
+                                <li><a href="contact.html">Reunion 2023</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -149,7 +149,7 @@
                             <li><a href="index.html">home</a></li>
                             <li><a href="about.html">Theresa and Nicole</a></li>
                             <li><a href="all.html">2022</a></li>
-                            <li><a href="contact.html">More</a></li>
+                            <li><a href="contact.html">Reunion 2023</a></li>
                         </ul>
                     </nav>
                 </div>
