--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">Theresa and Nicole</a></li>
                                 <li><a href="all.html">2022</a></li>
-                                <li><a href="contact.html" class="active">More</a></li>
+                                <li><a href="contact.html" class="active">Reunion 2023</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -53,8 +53,7 @@
         </div>
         <!-- end header -->
         <!-- header image -->
-        <div class="header-img">
-        </div>
+
         <!-- end header image -->
         <!-- Welcome message -->
         <div class="welcome-container">
@@ -68,16 +67,34 @@
         </div>
         <!-- Welcome message -->
         <!-- main content -->
-        <section class="templatemo-container">
+        <section class="templatemo-container section-shadow-bottom">
             <div class="container">
-
-
-                            </div>
-                        </form>
+                <div class="row section-title-container">
+                    <div class="col-lg-12 text-uppercase text-center">
+                        <h2 class="section-title">Wiley Reunion 2023</h2>
                     </div>
-                </div> <!-- row -->
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 col-md-6">
+                        <p style="font-size:2vw">If you knew or know of Grandma Rudy, please join us Sunday June 25, 2023 at Hok-Si-La in Lake City, MN. </p>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="carousel-container">
+                            <div class="crsl-items" data-navigation="navbtns">
+                                <div class="crsl-wrap">
+                                    <figure class="crsl-item">
+                                        <img src="img/savageheise.JPG" alt="Image" class="img-responsive img-thumbnail">
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>   <!-- carousel-container -->
 
-            </div> <!-- container -->
+                          <!-- Modal for full size images on click-->
+                        
+                    </div>
+                </div>
+                <!-- end section content -->
+            </div>
         </section>
 
         <section class="templatemo-container blue-bg footer-nav effect1">
@@ -89,7 +106,8 @@
                             <li><a href="index.html">home</a></li>
                             <li><a href="about.html">Theresa and Nicole</a></li>
                             <li><a href="all.html">2022</a></li>
-                            <li><a href="contact.html">More</a></li>
+                            <li><a href="contact.html">Reunion 2023</a></li>
+                            <li><a href="mailto:kateheise9103@gmail.com">Send Email</a></li>
                         </ul>
                     </nav>
                 </div>
