--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,12 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
-                        <p style="font-size:2vw">If you knew or know of Grandma Rudy, please join us Sunday June 25, 2023 at Hok-Si-La in Lake City, MN. </p>
+                        <p style="font-size:2vw">If you knew or know of Grandma Rudy, please join us Sunday June 25, 2023 at Hok-Si-La in Lake City, MN. 
+                        </p>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. Hok-Si-La offers a public beach, wooded trails, and camping. 
+                    We will be renting the large dinning hall so even if it rains there will be adequate space for indoor activities. </p>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="carousel-container">
