--- a/contact.html
+++ b/contact.html
@@ -91,9 +91,10 @@
                                         <img src="img/savageheise.JPG" alt="Image" class="img-responsive img-thumbnail">
                                     </figure>
                                 </div>
+
                             </div>
                         </div>   <!-- carousel-container -->
-
+                    <li><a href="mailto:kateheise9103@gmail.com">Send an Email to the organizers.</a></li>
                           <!-- Modal for full size images on click-->
                         
                     </div>
