--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,14 @@
 
                             </div>
                         </div>   <!-- carousel-container -->
-                    <li><a href="mailto:kateheise9103@gmail.com">Send an Email to the organizers.</a></li>
+                        <br>
+                        <br>
+                    <a href="mailto:kateheise9103@gmail.com, dmilsteadusn@gmail.com ?subject=Wiley Reunion 2023">Send an Email to the organizers</a>
+                    <br>
+                    <br>
+                    <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing">Conect to others on this public contact list</a>
+                    <br>
+                    <a> * This is a public sheet so only share information you are willing to have available to all. *</a>
                           <!-- Modal for full size images on click-->
                         
                     </div>
