--- a/contact.html
+++ b/contact.html
@@ -101,8 +101,13 @@
                     <br>
                     <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing">Conect to others on this public contact list</a>
                     <br>
-                    <a> * This is a public sheet so only share information you are willing to have available to all. *</a>
-                          <!-- Modal for full size images on click-->
+                    <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing"> * This is a public sheet so only share information you are willing to have available to all. *</a>
+                    <br>
+                    <br>    
+                    <a href="https://hoksilapark.com/">More information on Hok-Si-La</a>
+
+
+                    <!-- Modal for full size images on click-->
                         
                     </div>
                 </div>
