--- a/contact.html
+++ b/contact.html
@@ -96,15 +96,17 @@
                         </div>   <!-- carousel-container -->
                         <br>
                         <br>
-                    <a href="mailto:kateheise9103@gmail.com, dmilsteadusn@gmail.com ?subject=Wiley Reunion 2023">Send an Email to the organizers</a>
-                    <br>
-                    <br>
-                    <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing">Conect to others on this public contact list</a>
-                    <br>
-                    <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing"> * This is a public sheet so only share information you are willing to have available to all. *</a>
-                    <br>
-                    <br>    
-                    <a href="https://hoksilapark.com/">More information on Hok-Si-La</a>
+                    <div style="font-size:large" class="col-lg-30 col-md-30">   
+                        <a href="mailto:kateheise9103@gmail.com, dmilsteadusn@gmail.com ?subject=Wiley Reunion 2023">Send an Email to the organizers</a>
+                        <br>
+                        <br>
+                        <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing">Conect to others on this public contact list</a>
+                        <br>
+                        <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing"> * This is a public sheet so only share information you are willing to have available to all. *</a>
+                        <br>
+                        <br>    
+                        <a href="https://hoksilapark.com/">More information about Hok-Si-La</a>
+                    </div> 
 
 
                     <!-- Modal for full size images on click-->
