villa maria update

--- a/contact.html
+++ b/contact.html
@@ -76,12 +76,11 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
-                        <p style="font-size:2vw">If you knew or know of Grandma Rudy, please join us Sunday June 25, 2023 at Hok-Si-La in Lake City, MN. 
+                        <p style="font-size:2vw">If you knew or know of Grandma Rudy, please join us Sunday June 25, 2023 at the Villa Maria in Frontenac, MN. 
                         </p>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. Hok-Si-La offers a public beach, wooded trails, and camping. 
-                    We will be renting the large dinning hall so even if it rains there will be adequate space for indoor activities. </p>
+                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. The Villa Maria is in Frontenac and recently updated for events - thanks Wayne! </p>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="carousel-container">
@@ -105,7 +104,7 @@
                         <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing"> * This is a public sheet so only share information you are willing to have available to all. *</a>
                         <br>
                         <br>    
-                        <a href="https://hoksilapark.com/">More information about Hok-Si-La</a>
+                        <a href="https://www.villamariamn.com/">More information about the Villa Maria</a>
                     </div> 
 
 
