villa maria update

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                         </p>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. The Villa Maria is in Frontenac and recently updated for events - thanks Wayne! </p>
+                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. The Villa Maria is in Frontenac and recently updated for events - thanks Wayne! We are planning yard games and card games so bring your favorites!</p>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="carousel-container">
