villa maria update

--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,8 @@
                         <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing"> * This is a public sheet so only share information you are willing to have available to all. *</a>
                         <br>
                         <br>    
-                        <a href="https://www.villamariamn.com/">More information about the Villa Maria</a>
+                        <a href="https://www.villamariamn.com/">More information about the Villa Maria  </a>
+                        <a href=”https://www.google.com“> <img src=https://uploads-ssl.webflow.com/5ca38e19bd0509189b0e8bbc/5da932b2a2089f0e85584f6e_villa-maria-lodging-7-p-1080.jpeg” width=”100″ height=”132″> </a>
                     </div> 
 
 
