villa maria update

--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,7 @@
                         <br>
                         <br>    
                         <a href="https://www.villamariamn.com/">More information about the Villa Maria  </a>
-                        <a href=”https://www.google.com“> <img src=https://uploads-ssl.webflow.com/5ca38e19bd0509189b0e8bbc/5da932b2a2089f0e85584f6e_villa-maria-lodging-7-p-1080.jpeg” width=”100″ height=”132″> </a>
-                    </div> 
+                        <a href="https://www.villamariamn.com/"><img src="https://uploads-ssl.webflow.com/5ca38e19bd0509189b0e8bbc/5da932b2a2089f0e85584f6e_villa-maria-lodging-7-p-1080.jpeg"></a>  </div> 
 
 
                     <!-- Modal for full size images on click-->
