--- a/contact.html
+++ b/contact.html
@@ -76,19 +76,22 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
-                        <p style="font-size:2vw">If you knew or know of Grandma Rudy, please join us Sunday June 25, 2023 at the Villa Maria in Frontenac, MN. 
+                        <p style="font-size:2vw">If you knew or know of Grandma Rudy, please join us Sunday June 25, 2023 at the Woodhaven Lodge, Villa Maria in Frontenac, MN. 
                         </p>
+                        <figure class="crsl-item">
+                            <img src="img/savageheise.JPG" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. The Villa Maria is in Frontenac and recently updated for events - thanks Wayne! We are planning yard games and card games so bring your favorites!</p>
+                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. We plan to eat around 1. The Villa Maria is in Frontenac and recently updated for events - thanks Wayne! We are planning yard games and card games so bring your favorites!</p>
+                        <figure class="crsl-item">
+                            <img src="img/reunionflyer.jpg" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="carousel-container">
                             <div class="crsl-items" data-navigation="navbtns">
                                 <div class="crsl-wrap">
-                                    <figure class="crsl-item">
-                                        <img src="img/savageheise.JPG" alt="Image" class="img-responsive img-thumbnail">
-                                    </figure>
                                 </div>
 
                             </div>
@@ -103,9 +106,12 @@
                         <br>
                         <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing"> * This is a public sheet so only share information you are willing to have available to all. *</a>
                         <br>
+                        <br>
+                        <a href="https://docs.google.com/spreadsheets/d/1Ob7dYYuw4GLrL5dBjzWrEI8b6zuNwLHZctLe7DrXuKI/edit?usp=sharing"> Food list if you care to share what you plan to bring. </a>
+                        <br>
                         <br>    
-                        <a href="https://www.villamariamn.com/">More information about the Villa Maria  </a>
-                        <a href="https://www.villamariamn.com/"><img src="https://uploads-ssl.webflow.com/5ca38e19bd0509189b0e8bbc/5da932b2a2089f0e85584f6e_villa-maria-lodging-7-p-1080.jpeg"></a>  </div> 
+                        <a href="https://www.villamariamn.com/" target="_blank">More information about the Villa Maria  </a>
+                        <a href="https://www.villamariamn.com/" target="_blank"><img src="https://uploads-ssl.webflow.com/5ca38e19bd0509189b0e8bbc/5da932b2a2089f0e85584f6e_villa-maria-lodging-7-p-1080.jpeg"></a>  </div> 
 
 
                     <!-- Modal for full size images on click-->
