--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                         </figure>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. We plan to eat around 1. The Villa Maria is in Frontenac and recently updated for events - thanks Wayne! We are planning yard games and card games so bring your favorites!</p>
+                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. We plan to eat around 1. The Villa Maria is in Frontenac and recently updated for events - thanks Wayne! Bring your favorite card games and yard games!</p>
                         <figure class="crsl-item">
                             <img src="img/reunionflyer.jpg" alt="Image" class="img-responsive img-thumbnail">
                         </figure>
