--- a/alyssa.html
+++ b/alyssa.html
@@ -44,8 +44,8 @@ http://www.tooplate.com/view/2087-kalay
                <div class="col-md-offset-5 col-md-7 col-sm-12">
                     <div class="home-thumb">
                          <h1 class="wow fadeInUp" data-wow-delay="0.4s">Hello, I am Alyssa.</h1>
-                         <p class="wow fadeInUp white-color" data-wow-delay="0.6s">Praesent eleifend tristique nisl, nec finibus urna posuere nec. Quisque vel nunc eget arcu maximus facilisis non eu nisi. Aliquam ullamcorper est a nisl imperdiet luctus.</p>
-                         <a href="#service" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s">discover more</a>
+                         <p class="wow fadeInUp white-color" data-wow-delay="0.6s">I am a lover of animals who is looking to help with your pets while you are away. I have experience with cats, dogs, horses, cows and pigs.</p>
+                         <a href="#contact" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s"> Contact</a>
                     </div>
                </div>
 
@@ -236,8 +236,8 @@ http://www.tooplate.com/view/2087-kalay
                               <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis et tortor consectetur adipisicing lacinia tortor morbi ultricies.</p>
                          </div>
                          
-                         <p><i class="fa fa-map-marker"></i> 456 New Street 22000, New York City, USA</p>
-                         <p><i class="fa fa-comment"></i> <a href="mailto:info@company.com">info@company.com</a></p>
+                         <p><i class="fa fa-map-marker"></i> Serving Zumbrota, Mazeppa and Zumbro Falls MN</p>
+                         <p><i class="fa fa-comment"></i> <a href="mailto:alyssaheise@icloud.com">alyssaheise@icloud.com</a></p>
                          <p><i class="fa fa-phone"></i> 010-020-0340</p>
                     </div>
                </div>
