--- a/alyssa.html
+++ b/alyssa.html
@@ -69,7 +69,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class='fas fa-dog' style='font-size:48px'></i>
                          <h4>Pet Sitting</h4>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing morbi venenatis.</p>
+                         <p>Keep your pets at home while you are gone. I will feed them on their schedule, walk and play with them and see snuggle them.</p>
                     </div>
                </div>
 
@@ -77,7 +77,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb bg-grey">
                          <i class="fas fa-house"  style='font-size:48px'></i>
                          <h4 class="white-color">House Sitting</h4>
-                         <p>Duis sed arcu sed nunc maximus tempor. Maecenas et enim laoreet, pharetra risus vel.</p>
+                         <p>Ensure your home is safe while you are gone. I will check on your house each day to ensure everything is secure and functioning.</p>
                     </div>
                </div>
 
@@ -85,7 +85,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class='fas fa-horse' style='font-size:48px'></i>
                          <h4>Animal Chores</h4>
-                         <p>Sed tristique, nunc sit amet pellentesque pharetra, sapien urna.</p>
+                         <p>Going to be out of town but need your animal chores done? I can help. I have experience with most animals large and small.</p>
                     </div>
                </div>
 
@@ -93,7 +93,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class='fas fa-envelope' style='font-size:48px'></i>
                          <h4>Mail pick-up</h4>
-                         <p>Cras ut urna quis nisi luctus molestie tincidunt sed ipsum. Donec gravida laoreet erat.</p>
+                         <p>While I am checking on your animals or home, I will also grab your mail so you don't have to worry about pausing it and picking it up at the post office.</p>
                     </div>
                </div>
                
@@ -124,7 +124,7 @@ http://www.tooplate.com/view/2087-kalay
                          <!-- SECTION TITLE -->
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                               <h2>a little more about Alyssa</h2>
-                              <p>Graphic Designer, Creative Photographer & Front-end Developer</p>
+                              <p>I am a Zumbrota Mazeppa High School student and active 4-H member.</p>
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.8s">
                               <p>Praesent eleifend tristique nisl, nec finibus urna posuere nec. Quisque vel nunc eget arcu maximus facilisis non eu nisi. Aliquam ullamcorper est a nisl imperdiet luctus.</p>
@@ -154,12 +154,12 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image1.jpg" class="image-popup">
+                         <a href="images/alyssapig.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <h4 class="white-color">First Title</h4>
                                    <h2>Graphic Design</h2>
                               </div>
-                              <img src="images/work-image1.jpg" class="img-responsive" alt="Work 1">
+                              <img src="images/alyssapig.jpg" class="img-responsive" alt="Work 1">
                          </a>
                     </div>
                </div>
@@ -167,12 +167,12 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image2.jpg" class="image-popup">
+                         <a href="images/alyssahorse.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <h4 class="white-color">Title Two</h4>
                                    <h2>Photography</h2>
                               </div>
-                              <img src="images/work-image2.jpg" class="img-responsive" alt="Work 2">
+                              <img src="images/alyssahorse.jpg" class="img-responsive" alt="Work 2">
                          </a>
                     </div>
                </div>
@@ -180,12 +180,12 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image3.jpg" class="image-popup">
+                         <a href="images/alyssahorse2.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <h4 class="white-color">Third Title</h4>
                                    <h2>illustration</h2>
                               </div>
-                              <img src="images/work-image3.jpg" class="img-responsive" alt="Work 3">
+                              <img src="images/alyssahorse2.jpg" class="img-responsive" alt="Work 3">
                          </a>
                     </div>
                </div>
