--- a/alyssa.html
+++ b/alyssa.html
@@ -61,8 +61,8 @@ http://www.tooplate.com/view/2087-kalay
 
                <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                     <!-- SECTION TITLE -->
-                    <h2>what things i am doing...</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur venenatis tincidunt.</p>
+                    <h2>What I can help with.</h2>
+                    <!-- p>Lorem ipsum dolor sit amet, consectetur venenatis tincidunt.</p-->
                </div>
 
                <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -74,9 +74,9 @@ http://www.tooplate.com/view/2087-kalay
                </div>
 
                <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
-                    <div class="service-thumb bg-grey">
+                    <div class="service-thumb">
                          <i class="fas fa-house"  style='font-size:48px'></i>
-                         <h4 class="white-color">House Sitting</h4>
+                         <h4>House Sitting</h4>
                          <p>Ensure your home is safe while you are gone. I will check on your house each day to ensure everything is secure and functioning.</p>
                     </div>
                </div>
@@ -110,12 +110,12 @@ http://www.tooplate.com/view/2087-kalay
                <div class="col-md-4 col-sm-8">
                     <div class="about-image-thumb">
                          <img src="images/jeep.jpg" class="wow fadeInUp img-responsive" data-wow-delay="0.2s" alt="about image">
-                         <ul class="social-icon">
+                         <!-- ul class="social-icon">
                               <li><a href="#" class="fa fa-facebook"></a></li>
                               <li><a href="#" class="fa fa-twitter"></a></li>
                               <li><a href="#" class="fa fa-instagram"></a></li>
                               <li><a href="#" class="fa fa-behance"></a></li>
-                         </ul>
+                         </ul -->
                     </div>
                </div>
 
@@ -146,20 +146,20 @@ http://www.tooplate.com/view/2087-kalay
                <div class="col-md-12 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                         <h2>Seleted Designs</h2>
-                         <p>Lorem ipsum dolor sit amet, consectetur venenatis tincidunt.</p>
+                         <h2>Services Available</h2>
+                         <p>Select the the picture to view details.</p>
                     </div>
                </div>
 
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/alyssapig.jpg" class="image-popup">
+                         <h4 class="black-color">Pet Sitting</h4>
+                         <a href="images/alyssapig3.JPG" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">First Title</h4>
-                                   <h2>Graphic Design</h2>
+                                   <p2>$40 per day includes mail pickup, basic house security check, 2 feeding times, walks, snuggles with at least 2 hours per day with your pets. Additional time: $10/hour.</p2>
                               </div>
-                              <img src="images/alyssapig.jpg" class="img-responsive" alt="Work 1">
+                              <img src="images/alyssapig3.JPG" class="img-responsive" alt="Work 1">
                          </a>
                     </div>
                </div>
@@ -167,12 +167,12 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/alyssahorse.jpg" class="image-popup">
+                         <h4 class="white-black">House sitting</h4>
+                         <a href="images/alyssaheifer.JPG" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Title Two</h4>
-                                   <h2>Photography</h2>
+                                   <p2>$30 per day includes mail pickup, basic house security check. Additional checks are $10 per check per day.</p2>
                               </div>
-                              <img src="images/alyssahorse.jpg" class="img-responsive" alt="Work 2">
+                              <img src="images/alyssaheifer.JPG" class="img-responsive" alt="Work 2">
                          </a>
                     </div>
                </div>
@@ -180,12 +180,12 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/alyssahorse2.jpg" class="image-popup">
+                         <h4 class="black-color">Animal Chores</h4>
+                         <a href="images/alyssahorse3.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Third Title</h4>
-                                   <h2>illustration</h2>
+                                   <p2>$50 per day includes mail pickup, basic house security check, 2 feeding times per day for outside large breed animals.</p2>
                               </div>
-                              <img src="images/alyssahorse2.jpg" class="img-responsive" alt="Work 3">
+                              <img src="images/alyssahorse3.jpg" class="img-responsive" alt="Work 3">
                          </a>
                     </div>
                </div>
@@ -201,16 +201,16 @@ http://www.tooplate.com/view/2087-kalay
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <!-- SECTION TITLE -->
+                    <!-- SECTION TITLE>
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                          <h2>Get in touch</h2>
                          <p>Lorem ipsum dolor sit amet, consectetur venenatis tincidunt.</p>
-                    </div>
+                    </div-->
                </div>
 
                <div class="col-md-7 col-sm-10">
                     <!-- CONTACT FORM HERE -->
-                    <div class="wow fadeInUp" data-wow-delay="0.4s">
+                    <!-- div class="wow fadeInUp" data-wow-delay="0.4s">
                         <form id="contact-form" action="#" method="get">
                               <div class="col-md-6 col-sm-6">
                                    <input type="text" class="form-control" name="name" placeholder="Name" required="">
@@ -224,7 +224,7 @@ http://www.tooplate.com/view/2087-kalay
                               <div class="col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6">
                                    <button id="submit" type="submit" class="form-control" name="submit">Send Message</button>
                               </div>
-                        </form>
+                        </form -->
                     </div>
                </div>
 
@@ -233,12 +233,12 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="wow fadeInUp contact-info" data-wow-delay="0.4s">
                          <div class="section-title">
                               <h2>Contact Info</h2>
-                              <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis et tortor consectetur adipisicing lacinia tortor morbi ultricies.</p>
+                              <p>Service payment: half upon reservation with 90% of deposit refundable until 3 calendar days prior to service reservation. Balance due within 3 calendar days after service is complete. Send me an email for a total service quote.</p>
                          </div>
                          
                          <p><i class="fa fa-map-marker"></i> Serving Zumbrota, Mazeppa and Zumbro Falls MN</p>
                          <p><i class="fa fa-comment"></i> <a href="mailto:alyssaheise@icloud.com">alyssaheise@icloud.com</a></p>
-                         <p><i class="fa fa-phone"></i> 010-020-0340</p>
+                         <!--p><i class="fa fa-phone"></i> Send me an email to connect.</p-->
                     </div>
                </div>
 
@@ -253,16 +253,16 @@ http://www.tooplate.com/view/2087-kalay
         <div class="row">
 
                <div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.8s">
-                    <p class="white-color">Copyright &copy; 2017 Your Company 
+                    <p class="white-color">Copyright &copy; 2023 Alyssa's Pet Service 
                     | Design: Tooplate</p>
                     <div class="wow fadeInUp" data-wow-delay="1s">
-                         <ul class="social-icon">
+                         <!-- ul class="social-icon">
                               <li><a href="#" class="fa fa-facebook"></a></li>
                               <li><a href="#" class="fa fa-twitter"></a></li>
                               <li><a href="#" class="fa fa-instagram"></a></li>
                               <li><a href="#" class="fa fa-behance"></a></li>
                               <li><a href="#" class="fa fa-github"></a></li>
-                         </ul>
+                         </ul -->
                     </div>
           </div>
      </div>
