--- a/alyssa.html
+++ b/alyssa.html
@@ -17,13 +17,13 @@ Template 2087 Kalay
 http://www.tooplate.com/view/2087-kalay
 
 -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/animate.css">
-<link rel="stylesheet" href="css/magnific-popup.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
+<link rel="stylesheet" href="css/bootstrap.min1.css">
+<link rel="stylesheet" href="css/animate1.css">
+<link rel="stylesheet" href="css/magnific-popup-1.css">
+<link rel="stylesheet" href="css/font-awesome.min1.css">
 
 <!-- MAIN CSS -->
-<link rel="stylesheet" href="css/tooplate-style.css">
+<link rel="stylesheet" href="css/tooplate-style1.css">
 
 </head>
 <body>
@@ -147,7 +147,7 @@ http://www.tooplate.com/view/2087-kalay
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                          <h2>Services Available</h2>
-                         <p>Select the the picture to view details.</p>
+                         <p>Select the service to view details.</p>
                     </div>
                </div>
 
@@ -269,14 +269,14 @@ http://www.tooplate.com/view/2087-kalay
 </footer>
 
 <!-- SCRIPTS -->
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.parallax.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/magnific-popup-options.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/custom.js"></script>
+<script src="js/jquery1.js"></script>
+<script src="js/bootstrap.min1.js"></script>
+<script src="js/jquery.parallax1.js"></script>
+<script src="js/smoothscroll1.js"></script>
+<script src="js/jquery.magnific-popup.min1.js"></script>
+<script src="js/magnific-popup-options1.js"></script>
+<script src="js/wow.min1.js"></script>
+<script src="js/custom1.js"></script>
 <script src="https://kit.fontawesome.com/9f8135b664.js" crossorigin="anonymous"></script>
 
 </body>
