--- a/alyssa.html
+++ b/alyssa.html
@@ -167,7 +167,7 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <h4 class="white-black">House sitting</h4>
+                         <h4 class="black-color">House sitting</h4>
                          <a href="images/alyssaheifer.JPG" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <p2>$30 per day includes mail pickup, basic house security check. Additional checks are $10 per check per day.</p2>
