--- a/alyssa.html
+++ b/alyssa.html
@@ -159,7 +159,7 @@ http://www.tooplate.com/view/2087-kalay
                               <div class="work-thumb-overlay">
                                    <p2>$40 per day includes mail pickup, basic house security check, 2 feeding times, walks, snuggles with at least 2 hours per day with your pets. Additional time: $10/hour.</p2>
                               </div>
-                              <img src="images/alyssapig3.JPG" class="img-responsive" alt="Work 1">
+                              <img src="images/alyssapig3.JPG" class="img-responsive" alt="Pets">
                          </a>
                     </div>
                </div>
@@ -172,7 +172,7 @@ http://www.tooplate.com/view/2087-kalay
                               <div class="work-thumb-overlay">
                                    <p2>$30 per day includes mail pickup, basic house security check. Additional checks are $10 per check per day.</p2>
                               </div>
-                              <img src="images/alyssaheifer.JPG" class="img-responsive" alt="Work 2">
+                              <img src="images/alyssaheifer.JPG" class="img-responsive" alt="House">
                          </a>
                     </div>
                </div>
@@ -180,12 +180,12 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <h4 class="black-color">Animal Chores</h4>
-                         <a href="images/alyssahorse3.jpg" class="image-popup">
+                         <h4 class="black-color">Pet Sitting</h4>
+                         <a href="images/alyssahorse3.JPG" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <p2>$50 per day includes mail pickup, basic house security check, 2 feeding times per day for outside large breed animals.</p2>
                               </div>
-                              <img src="images/alyssahorse3.jpg" class="img-responsive" alt="Work 3">
+                              <img src="images/alyssahorse3.JPG" class="img-responsive" alt="Chores">
                          </a>
                     </div>
                </div>
