--- a/alyssa.html
+++ b/alyssa.html
@@ -180,7 +180,7 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <h4 class="black-color">Pet Sitting</h4>
+                         <h4 class="black-color">Animal Chores</h4>
                          <a href="images/alyssahorse3.JPG" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <p2>$50 per day includes mail pickup, basic house security check, 2 feeding times per day for outside large breed animals.</p2>
