--- a/alyssa.html
+++ b/alyssa.html
@@ -127,8 +127,8 @@ http://www.tooplate.com/view/2087-kalay
                               <p>I am a Zumbrota Mazeppa High School student and active 4-H member.</p>
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.8s">
-                              <p>Praesent eleifend tristique nisl, nec finibus urna posuere nec. Quisque vel nunc eget arcu maximus facilisis non eu nisi. Aliquam ullamcorper est a nisl imperdiet luctus.</p>
-                              <p>Sed sed convallis odio. Nulla scelerisque libero efficitur diam fermentum, quis tincidunt urna placerat. Maecenas sed tortor sed nisi semper ultricies. Nulla ornare metus in massa mollis scelerisque.</p>
+                              <p>I have a genuine love and passion for animals. I understand the importance of adhering to a routine to ensure proper care at the right time.</p>
+                              <p>I have grown up surrounded by all types of animals and have been responsible for their care. </p>
                          </div>
                     </div>
                </div>
